--- a/package.json
+++ b/package.json
@@ -33,14 +33,15 @@
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.5",
     "lint-staged": "^10.2.6",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "prop-types": "^15.7.2"
   },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
-    "lint": "eslint --fix pages/*",
+    "lint": "eslint --fix src/**/*.js",
     "prettier": "prettier --write ."
   },
   "eslintConfig": {
