--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "husky": "^4.3.5",
     "lint-staged": "^10.2.6",
     "prettier": "^2.0.5",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react-transition-group": "^4.4.1"
   },
   "scripts": {
     "start": "craco start",
